--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -2,6 +2,18 @@ body {
   min-width: 420px;
 }
 
+.header_title {
+  width: 68%;
+}
+
+.language_dropdown_menu {
+  min-width: 110px;
+}
+
+#language_dropdown {
+  transform: scale(0.77, 0.77);
+}
+
 [data-tooltip] {
   position: relative;
 }
