--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -61,3 +61,9 @@ body {
   left: 50%;
   margin: -5px auto auto -5px;
 }
+
+.divider_hr {
+  margin: 16px 0;
+  height: 1px;
+  background-color: #999;
+}
